wip: Add English

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -80,6 +80,27 @@
     "processMatchingRate" : "Determining the matching rate of the reported photo.",
     "indicatorMatchingRate": "Once the matching rate determination is complete,\nthe tip comment will be registered.",
 
+    "pushSettings" : "Notification Settings",
+    "addMissingPost" : "Report Missing Person",
+    "newMissingPost" : "New Missing Report in Area of Interest", 
+    "selectInterest" : "Select Area of Interest", 
+    "firstArea" : "City",
+    "secondArea": "State/Province/Region",
+
+    "mypage" : "My Page",
+    "addUserName" : "Register your username.",
+    "postSetting" : "Post Management",
+    "writtenPost" : "Written Missing Reports",
+    "noPost" : "No written missing reports.",
+    "writtenComment" : "Written Tip Comments",
+    "noComment" : "No written tip comments.",
+    "bookmarkPost" : "Bookmarked Missing Info",
+    "noBookmark" : "No bookmarked missing reports.",
+    "appSetting" : "App Settings",
+    "pushSetting" : "Notification Settings",
+    "logout" : "Logout",
+    "singout" : "Singout",
+
     "agreementTitle" : "Wait a moment! Have you checked before registering the missing person?",
     "agreementCheck" : "I have reviewed the above content and agree.",
     "agreementContent" : "According to Article 15 of the Personal Information Protection Act, personal information may be provided without the consent of the missing person if it is deemed necessary for the urgent benefit of the data subject or a third party's life, body, property, or in cases where the missing person or their legal representative is unable to express their intentions due to incapacity or unknown address, and it is clear that consent cannot be obtained in advance.\n\nUnder Article 71 of the Personal Information Protection Act, if personal information of the missing person is registered with MissingYou without meeting the aforementioned conditions, the registrant may face imprisonment for up to five years or a fine of up to 50 million won.\n\nFurthermore, according to Article 36 of the Personal Information Protection Act (Correction/Deletion of Personal Information), individuals who have accessed their personal information have the right to request its correction or deletion from MissingYou.\n\n• I acknowledge that under the Personal Information Protection Act, if it is not recognized as necessary for the urgent benefit of the missing person's life, body, or welfare, their personal information cannot be registered with the MissingYou app.\n\nIn other words, I understand that registering missing information with the intention of harming the life or body of the missing person, or unfairly infringing upon their property or other benefits, may result in penalties for violating the Personal Information Protection Act.\n\n• Additionally, I acknowledge that this declaration may serve as evidence of the intentions or consent of the author in case of legal issues.\n\n• I understand that, in accordance with Article 36 of the Personal Information Protection Act, missing reports may be deleted without separate notice to the author upon request from the data subject, the missing person.\n\n• I fully understand the above contents and solemnly pledge to handle the missing person's personal information appropriately."
