Feat: Multilingual Support

--- a/lib/core/localization/l10n/intl_en.arb
+++ b/lib/core/localization/l10n/intl_en.arb
@@ -21,7 +21,7 @@
     "detail": "Detail",
     "comment": "Witness Comment",
     "cancelReport": "Cancel Report",
-    "submitTip": "Submit a Witness Comment",
+    "submitTip": "Submit a Comment",
     "gender": "Gender",
     "ageMissing": "Age Missing",
     "height": "Height",
@@ -40,7 +40,9 @@
     "postName": "Please enter a name.",
     "postHintName": "Please enter the missing person&apos;s name.",
     "female": "Female",
+    "f": "F",
     "male": "Male",
+    "m": "M",
     "missingTime": "Time of Disappearance",
     "clothing": "Clothing",
     "postClothing": "Description of Clothing",
@@ -97,6 +99,26 @@
     "failAddCommentAlert": "Failed to submit witness comment. Please try again.",
     "deleteComment": "Delete Witness Comment",
     "deleteCommentAlert": "The witness comment has been deleted.",
+    "noAddress": "No address returned.",
+    "tryAgainAdress": "Try again with nearby locations.",
+    "addCommentSnackBar": "Submitted Witness Comment.",
+    "sucessAddComment": "Witness Comment has been submitted successfully.",
+    "failComment": "Failed to submit witness comment.",
+    "tryAgainComment": "Failed to submit witness comment. Please try again.",
+    "addReport": "Add Missing Report",
+    "sucessAddReport": "Your Report has been submitted successfully.",
+    "failThumbnail": "Failed to save thumbnail selection",
+    "sucessReport": "Your Report has been submitted successfully.",
+    "delReport": "Delete Missing Report",
+    "delReportSnackBar": "Missing Report deleted.",
+    "saveNoti": "Save Notification Settings",
+    "sucessNoti": "Settings saved successfully.",
+    "failSaveNoti": "Failed to save notification settings",
+    "failSaveNotiSnackBar": "Failed to save settings. Please try again.",
+    "delComment": "Delete witness comment",
+    "delCommentSnackBar": "Witness comment deleted.",
+    "overImgNum": "Exceeded maximum image selection.",
+    "overImgNumMsg": "You can input a maximum of 3 images.",
     "agreementTitle": "Wait a moment! Have you checked before submitting the missing person report?",
     "agreementCheck": "I have reviewed the above content and agree.",
     "agreementContent": "According to Article 15 of the Personal Information Protection Act, personal information may be provided without the consent of the missing person if it is deemed necessary for the urgent benefit of the data subject or a third party&apos;s life, body, property, or in cases where the missing person or their legal representative is unable to express their intentions due to incapacity or unknown address, and it is clear that consent cannot be obtained in advance.\n\nUnder Article 71 of the Personal Information Protection Act, if personal information of the missing person is registered with MissingYou without meeting the aforementioned conditions, the registrant may face imprisonment for up to five years or a fine of up to 50 million won.\n\nFurthermore, according to Article 36 of the Personal Information Protection Act (Correction/Deletion of Personal Information), individuals who have accessed their personal information have the right to request its correction or deletion from MissingYou.\n\n• I acknowledge that under the Personal Information Protection Act, if it is not recognized as necessary for the urgent benefit of the missing person&apos;s life, body, or welfare, their personal information cannot be registered with the MissingYou app.\n\nIn other words, I understand that registering missing information with the intention of harming the life or body of the missing person, or unfairly infringing upon their property or other benefits, may result in penalties for violating the Personal Information Protection Act.\n\n• Additionally, I acknowledge that this declaration may serve as evidence of the intentions or consent of the author in case of legal issues.\n\n• I understand that, in accordance with Article 36 of the Personal Information Protection Act, missing reports may be deleted without separate notice to the author upon request from the data subject, the missing person.\n\n• I fully understand the above contents and solemnly pledge to handle the missing person&apos;s personal information appropriately."
