--- a/lib/core/localization/l10n/intl_ko.arb
+++ b/lib/core/localization/l10n/intl_ko.arb
@@ -40,7 +40,9 @@
     "postName": "이름을 입력해주세요.",
     "postHintName": "실종자 이름을 입력해주세요.",
     "female": "여자",
+    "f": "여자",
     "male": "남자",
+    "m": "남자",
     "missingTime": "실종 시각",
     "clothing": "옷차림",
     "postClothing": "옷차림을 입력해주세요.",
@@ -97,6 +99,26 @@
     "failAddCommentAlert": "제보 댓글 등록이 실패 하였습니다. 다시 시도해 주세요.",
     "deleteComment": "제보 댓글 삭제",
     "deleteCommentAlert": "제보 댓글을 삭제하였습니다.",
+    "noAddress": "반환된 주소 없음",
+    "tryAgainAdress": "근처 위치로 다시 시도해 주세요.",
+    "addCommentSnackBar": "제보 댓글 등록",
+    "sucessAddComment": "제보 댓글 등록이 완료되었습니다.",
+    "failComment": "제보 댓글 등록 실패",
+    "tryAgainComment": "제보 댓글 등록이 실패 하였습니다. 다시 시도해 주세요.",
+    "addReport": "실종 정보 등록",
+    "sucessAddReport": "실종 정보 등록이 완료되었습니다.",
+    "failThumbnail": "대표 이미지 지정 여부 저장 실패",
+    "sucessReport": "실종 정보는 정상적으로 등록됩니다.",
+    "delReport": "실종 정보 삭제",
+    "delReportSnackBar": "실종 정보를 삭제하였습니다.",
+    "saveNoti": "알림 설정 저장",
+    "sucessNoti": "설정 저장이 완료되었습니다.",
+    "failSaveNoti": "알림 설정 실패",
+    "failSaveNotiSnackBar": "설정 저장이 실패하였습니다. 다시 시도해 주세요.",
+    "delComment": "제보 댓글 삭제",
+    "delCommentSnackBar": "제보 댓글을 삭제하였습니다.",
+    "overImgNum": "이미지 최대 선택 초과",
+    "overImgNumMsg": "이미지는 최대 3개 입력할 수 있습니다.",
     "agreementTitle": "잠깐! 실종자 등록 전 확인했나요?",
     "agreementCheck": "위의 내용을 확인하였으며, 동의합니다.",
     "agreementContent": "개인정보 보호법 제 15조에 따라, 실종자 또는 그 법정대리인이 의사표시를 할 수 없는 상태에 있거나 주소불명 등으로 사전 동의를 받을 수 없는 경우로서 명백히 정보주체 또는 제3자의 급박한 생명, 신체, 재산의 이익을 위하여 필요하다고 인정되는 경우에만 실종자의 동의 없이도 개인정보를 제공할 수 있습니다. \n 개인정보 보호법 제 71조에 따라, 위의 경우가 아님에도 불구하고 실종자의 개인정보를 MissingYou에게 등록한 경우 5년 이하의 징역 또는 5천만원 이하의 벌금에 처할 수 있습니다. \n 또한 개인정보 보호법 제36조(개인정보의 정정ㆍ삭제)에 따라 자신의 개인정보를 열람한 정보주체는 MissingYou에게 그 개인정보의 정정 또는 삭제를 요구할 수 있습니다. \n\n\n • 개인정보 보호법에 따라 실종자의 급박한 생명, 신체, 이익을 위해 필요하다고 인정되지 않은 경우 실종자의 개인정보를 MissingYou앱에 등록할 수 없음을 숙지하였습니다. \n\n 즉 실종자의 생명 또는 신체를 해할 우려가 있거나 실종자의 재산과 그 밖의 이익을 부당하게 침해할 목적으로 실종 정보를 등록하는 경우, 개인정보보호법 위반으로 처벌받을 수 있음을 숙지하였습니다. \n\n • 또한 법적 문제 발생 시 해당 서약서가 작성자의 의도나 동의에 대한 증거로 사용될 수 있음을 숙지하였습니다. \n\n • 개인정보 보호법 제 36조에 따라 정보 주체인 실종자의 요청에 따라, 신고글은 언제든 작성자에게 별도의 통보없이 삭제될 수 있음을 숙지하였습니다. \n\n • 위의 내용을 충분히 숙지하였으며, 실종자의 개인 정보를 적법하게 다룰 것을 엄숙히 서약합니다."
