Design: Revise intl en & UI

--- a/lib/core/localization/l10n/intl_en.arb
+++ b/lib/core/localization/l10n/intl_en.arb
@@ -10,35 +10,38 @@
     "currentLocation": "Current Location",
     "main": "Missing Persons",
     "report": "Report",
-    "post": "Latest post",
+    "post": "Latest Reports",
     "map": "Map",
     "updateLocation": "Location Update",
     "updateLocationAlert": "Successfully updated current location.",
     "emptyInfo": "No submitted missing reports found.",
     "ageunit": "y.o.",
     "refreshMap": "Refresh search at this location.",
-    "missingPost": "Missing Person Posters",
+    "missingPost": "Missing Person Reports",
     "detail": "Detail",
     "comment": "Witness Comment",
     "cancelReport": "Cancel Report",
     "submitTip": "Submit a Comment",
     "gender": "Gender",
-    "ageMissing": "Age Missing",
+    "ageMissing": "Age",
     "height": "Height",
     "weight": "Weight",
     "missingLocation": "Missing Location",
     "missingDescription": "Clothing Description",
     "characteristics": "Identifying Characteristics",
+    "momentAgo": "just a moment ago",
+    "minutesAgo": " minutes ago",
+    "hoursAgo": " hours ago",
     "matchingRateFilter": "Matching rate of {rate}% or higher",
     "noCommt": "No matching witness comments found.",
     "emptyCommt": "No witness comments have been submitted yet.",
-    "matchingRate": "Matching rate: {rate2} %",
+    "matchingRate": "Matching rate\n{rate2}%",
     "circumstances": "Circumstances",
     "reportMissingTitle": "Report Missing Person",
     "postMissingPerson": "Missing Person",
-    "postMissingName": "Missing Person&apos;s Name",
+    "postMissingName": "Missing Person's Name",
     "postName": "Please enter a name.",
-    "postHintName": "Please enter the missing person&apos;s name.",
+    "postHintName": "Please enter the missing person's name.",
     "female": "Female",
     "f": "F",
     "male": "Male",
@@ -46,8 +49,8 @@
     "missingTime": "Time of Disappearance",
     "clothing": "Clothing",
     "postClothing": "Description of Clothing",
-    "postHintClothing": "Please describe the type and color of the clothing. (e.g. yellow sweater, black pants)",
-    "postHintCharact": "Please provide details such as the missing person&apos;s physique, facial features, distinctive behaviors, medical conditions, and detailed clothing description.",
+    "postHintClothing": "Please describe clothing type and color. (e.g. yellow sweater, black pants)",
+    "postHintCharact": "Please provide details such as the missing person's physique, facial features, distinctive behaviors, medical conditions, and detailed clothing description.",
     "postAge": "Please enter the age in years.",
     "enterTime": "Enter Time",
     "enterTimePlz": "Please enter the time.",
@@ -85,12 +88,12 @@
     "noPost": "No written missing reports.",
     "writtenComment": "Written Witness Comments",
     "noComment": "No written witness comments.",
-    "bookmarkPost": "Bookmarked Missing Info",
+    "bookmarkPost": "Bookmarked Missing Reports",
     "noBookmark": "No bookmarked missing reports.",
     "appSetting": "App Settings",
     "pushSetting": "Notification Settings",
     "logout": "Log Out",
-    "singout": "Sing Out",
+    "singout": "Sign Out",
     "exceedImgNum": "Exceeded maximum image selection",
     "exceedImgNumAlert": "You can only register up to 3 images.",
     "addComment": "Submit Witness Comment",
@@ -121,5 +124,5 @@
     "overImgNumMsg": "You can input a maximum of 3 images.",
     "agreementTitle": "Wait a moment! Have you checked before submitting the missing person report?",
     "agreementCheck": "I have reviewed the above content and agree.",
-    "agreementContent": "According to Article 15 of the Personal Information Protection Act, personal information may be provided without the consent of the missing person if it is deemed necessary for the urgent benefit of the data subject or a third party&apos;s life, body, property, or in cases where the missing person or their legal representative is unable to express their intentions due to incapacity or unknown address, and it is clear that consent cannot be obtained in advance.\n\nUnder Article 71 of the Personal Information Protection Act, if personal information of the missing person is registered with MissingYou without meeting the aforementioned conditions, the registrant may face imprisonment for up to five years or a fine of up to 50 million won.\n\nFurthermore, according to Article 36 of the Personal Information Protection Act (Correction/Deletion of Personal Information), individuals who have accessed their personal information have the right to request its correction or deletion from MissingYou.\n\n• I acknowledge that under the Personal Information Protection Act, if it is not recognized as necessary for the urgent benefit of the missing person&apos;s life, body, or welfare, their personal information cannot be registered with the MissingYou app.\n\nIn other words, I understand that registering missing information with the intention of harming the life or body of the missing person, or unfairly infringing upon their property or other benefits, may result in penalties for violating the Personal Information Protection Act.\n\n• Additionally, I acknowledge that this declaration may serve as evidence of the intentions or consent of the author in case of legal issues.\n\n• I understand that, in accordance with Article 36 of the Personal Information Protection Act, missing reports may be deleted without separate notice to the author upon request from the data subject, the missing person.\n\n• I fully understand the above contents and solemnly pledge to handle the missing person&apos;s personal information appropriately."
+    "agreementContent": "According to Article 15 of the Personal Information Protection Act, personal information may be provided without the consent of the missing person if it is deemed necessary for the urgent benefit of the data subject or a third party's life, body, property, or in cases where the missing person or their legal representative is unable to express their intentions due to incapacity or unknown address, and it is clear that consent cannot be obtained in advance.\n\nUnder Article 71 of the Personal Information Protection Act, if personal information of the missing person is registered with MissingYou without meeting the aforementioned conditions, the registrant may face imprisonment for up to five years or a fine of up to 50 million won.\n\nFurthermore, according to Article 36 of the Personal Information Protection Act (Correction/Deletion of Personal Information), individuals who have accessed their personal information have the right to request its correction or deletion from MissingYou.\n\n• I acknowledge that under the Personal Information Protection Act, if it is not recognized as necessary for the urgent benefit of the missing person's life, body, or welfare, their personal information cannot be registered with the MissingYou app.\n\nIn other words, I understand that registering missing information with the intention of harming the life or body of the missing person, or unfairly infringing upon their property or other benefits, may result in penalties for violating the Personal Information Protection Act.\n\n• Additionally, I acknowledge that this declaration may serve as evidence of the intentions or consent of the author in case of legal issues.\n\n• I understand that, in accordance with Article 36 of the Personal Information Protection Act, missing reports may be deleted without separate notice to the author upon request from the data subject, the missing person.\n\n• I fully understand the above contents and solemnly pledge to handle the missing person's personal information appropriately."
 }
