--- a/lib/core/localization/l10n/intl_ko.arb
+++ b/lib/core/localization/l10n/intl_ko.arb
@@ -29,10 +29,13 @@
     "missingLocation": "마지막 위치",
     "missingDescription": "실종 당시 옷차림",
     "characteristics": "특이사항",
+    "momentAgo": "방금 전",
+    "minutesAgo": "분 전",
+    "hoursAgo": "시간 전",
     "matchingRateFilter": "일치율 {rate}% 이상",
     "noCommt": "조건에 맞는 제보 댓글이 없습니다.",
     "emptyCommt": "아직 등록된 제보 댓글이 없습니다.",
-    "matchingRate": "일치율 {rate2} %",
+    "matchingRate": "일치율 {rate2}%",
     "circumstances": "당시 상황",
     "reportMissingTitle": "실종자 등록",
     "postMissingPerson": "실종자",
