Design: Revise intl en & MapMarkerDialog UI

--- a/lib/core/localization/l10n/intl_en.arb
+++ b/lib/core/localization/l10n/intl_en.arb
@@ -27,8 +27,10 @@
     "height": "Height",
     "weight": "Weight",
     "missingLocation": "Missing Location",
+    "missingLocationShort": "Location",
     "missingDescription": "Clothing Description",
     "characteristics": "Identifying Characteristics",
+    "characteristicsShort": "Characteristics",
     "momentAgo": "just a moment ago",
     "minutesAgo": " minutes ago",
     "hoursAgo": " hours ago",
@@ -47,6 +49,7 @@
     "male": "Male",
     "m": "M",
     "missingTime": "Time of Disappearance",
+    "missingTimeShort": "Time",
     "clothing": "Clothing",
     "postClothing": "Description of Clothing",
     "postHintClothing": "Please describe clothing type and color. (e.g. yellow sweater, black pants)",
