--- a/lib/core/localization/l10n/intl_ko.arb
+++ b/lib/core/localization/l10n/intl_ko.arb
@@ -27,8 +27,10 @@
     "height": "키",
     "weight": "몸무게",
     "missingLocation": "마지막 위치",
+    "missingLocationShort": "마지막 위치",
     "missingDescription": "실종 당시 옷차림",
     "characteristics": "특이사항",
+    "characteristicsShort": "특이사항",
     "momentAgo": "방금 전",
     "minutesAgo": "분 전",
     "hoursAgo": "시간 전",
@@ -47,6 +49,7 @@
     "male": "남자",
     "m": "남자",
     "missingTime": "실종 시각",
+    "missingTimeShort": "실종 시각",
     "clothing": "옷차림",
     "postClothing": "옷차림을 입력해주세요.",
     "postHintClothing": "상•하의 종류와 색상을 적어주세요. (ex.노란니트, 검정바지)",
