Design: Revise Intl English

--- a/lib/core/localization/l10n/intl_en.arb
+++ b/lib/core/localization/l10n/intl_en.arb
@@ -82,8 +82,8 @@
     "addMissingPost": "Report Missing Person",
     "newMissingPost": "New Missing Report in Area of Interest",
     "selectInterest": "Select Area of Interest",
-    "firstArea": "City",
-    "secondArea": "State/Province/Region",
+    "firstArea": "State/Province",
+    "secondArea": "City",
     "mypage": "My Page",
     "addUserName": "Register your username.",
     "postSetting": "Post Management",
